# astro-denoise

./: .cruft.json  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
conf/: config.yaml
conf/dataloader/: base.yaml
outputs/2023-11-16/22-15-55/.hydra/: hydra.yaml
outputs/2023-11-16/22-19-20/.hydra/: hydra.yaml
outputs/2023-11-16/22-20-09/.hydra/: hydra.yaml
outputs/2023-11-16/22-21-10/.hydra/: hydra.yaml
outputs/2023-11-16/22-21-39/.hydra/: hydra.yaml
outputs/2023-11-16/22-28-22/.hydra/: hydra.yaml
outputs/2023-11-16/22-28-38/.hydra/: hydra.yaml
outputs/2023-11-16/22-28-48/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-16/22-30-36/.hydra/: hydra.yaml
outputs/2023-11-16/22-31-21/.hydra/: hydra.yaml
src/astro_denoise/datascripts/: dataset.py  utils.py
src/astro_denoise/factories/: dataset.py
src/astro_denoise/modeling/: train_model.py  utils.py
src/astro_denoise/networks/: basicblock.py  noise2void2.py
src/astro_denoise/transformations/: transforms.py
tests/: __init__.py  test_import.py
